=========================================================================
CHANGE LOG
=========================================================================

2007-08-30  Warren L. DeLano <warren@delsci.com>

	* fixed VRML2 normals for rotated views (thanks Aaron Bryden!)
	
2007-08-29  Warren L. DeLano <warren@delsci.com>

	* fixed mistake with new double-hypen argument parsing
	
	* fixed problem with windows HOMEPATH ending in backslash
	
2007-08-28  Warren L. DeLano <warren@delsci.com>

	* added ramp_blend_nearby_colors setting (for LigandScout-like
    	  coloring via ramps)
	
	* movie_animate_by_frame setting controls whether animations
	  are interpolated based on wall-clock or movie time

	* added support for smooth camera interpolation within movies
	  (using scenes, views, animate options, etc.) for mpng, etc.

2007-08-26  Warren L. DeLano <warren@delsci.com>

	* added store_defaults & related options to reinitialize command
	
2007-08-25  Warren L. DeLano <warren@delsci.com

	* implemented auto_rename_duplicate_objects setting
		
2007-08-24  Warren L. DeLano <warren@delsci.com>

	* added ellipsoid_quality and cgo_ellipsoid_quality settings
	
	* added CGO ellipsoids
	
2007-08-15  Warren L. DeLano <warren@delsci.com>

	* implemented some fixes to deal with new PDB nomenclature
	
	* now guessing approximate valences for PDB hetatm ligands in
	  order to improve hydrogen-bond display (setting:
	  pdb_hetatm_guess_valences) -- the guesses are often
	  wrong but are much better than nothing!
	
	* added sys.stdout.writelines emulation	
	
2007-08-14  Warren L. DeLano <warren@delsci.com>

	* sys.argv if not definied, now set using __main__.pymol_argv
	
	* added util.cnc keyword (formerly just an api function)
	
2007-08-02  Warren L. DeLano <warren@delsci.com>

	* incorporated Michael Lerner's suggestion for argument handling
	    pymol -c script.py --do=something --when=now
	    sys.argv = [ 'script.py', '--do=something' , '--when=now' ]
	